[package]
name = "ss"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
getopts = "0.2"

tokio = { version = "0.3", features = ["rt", "net"] }

shadowsocks-crypto = { version = "0.1", optional = false }


# [[bin]]
# name = "sslocal"

[features]
default = [
    "tokio/io-util",
    "tokio/io-std",
    "tokio/macros",
    "tokio/net",
    "tokio/parking_lot",
    # "tokio/process",
    "tokio/rt",
    "tokio/rt-multi-thread",
    # "tokio/signal",
    # "tokio/stream",
    # "tokio/sync",
    # "tokio/time",

    
]
